--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 
-<body class="bg-dark text-light">
+<body class="bg-secondary text-light">
   <div class="container">
     <app-root></app-root>
   </div>
